--- a/getting-started/setup-prerequisites-installation/installation-methods.mdx
+++ b/getting-started/setup-prerequisites-installation/installation-methods.mdx
@@ -1,341 +1,259 @@
 ---
-title: "Installation (CMake, Bazel, Manual)"
-description: "Step-by-step instructions for installing GoogleTest and GoogleMock using popular build systems like CMake or Bazel, as well as guidance for manual or custom setups, empowering users to start quickly regardless of their development environment."
+title: "Installation Methods"
+description: "Details the various methods to install GoogleTest and GoogleMock, including direct source integration, CMake, Bazel, and platform-specific instructions. Guides users through step-by-step installation for different environments and links to in-depth quickstart guides."
 ---
 
-# Installation (CMake, Bazel, Manual)
+# Installation Methods
 
-Step-by-step instructions for installing GoogleTest and GoogleMock using popular build systems like CMake or Bazel, as well as manual/custom setups. This guide empowers you to integrate GoogleTest quickly and reliably regardless of your development environment.
+GoogleTest and GoogleMock offer flexible installation methods tailored to different development workflows and platforms. This guide details each approach, from direct source integration and CMake builds to Bazel usage and platform-specific instructions. Follow the step-by-step instructions to set up GoogleTest and GoogleMock efficiently in your environment.
 
 ---
 
 ## 1. Prerequisites & System Requirements
 
-Before installation, ensure your environment meets the following requirements:
+Before installing GoogleTest and GoogleMock, ensure your environment meets the following:
 
-- **C++ Standard**: Your compiler must support **C++17** or later.
-- **Supported Platforms**: Linux, Windows, Mac OS X, and others as detailed on the Supported Platforms page.
-- **Build Tools**:
-  - For CMake: Version 3.14 or higher is recommended.
-  - For Bazel: Refer to your Bazel workspace setup requirements.
-- **Dependencies**: 
-  - CMake builds automatically include GoogleMock unless disabled.
-  - Bazel automatically integrates GoogleTest and GoogleMock.
-- **Permissions**: Ensure you have write permissions to installation directories (e.g., `/usr/local/` on Unix systems).
+- **Operating System:** Compatible with Linux, macOS, Windows, and other supported platforms.
+- **Compiler:** Supports at least C++17 standard.
+- **Build Tools:** Depending on the method, you may need CMake (3.14 or later recommended), Make, Ninja, or Bazel.
+- **Permissions:** Access to install libraries on your system (may require administrator rights).
 
-<Tip>
-Double-check that your compiler supports C++17 features; otherwise, the build will fail.
-</Tip>
+Refer to the [System Requirements & Supported Platforms](requirements-supported-platforms.md) for full details.
 
 ---
 
-## 2. Installation Using CMake
+## 2. Installation Methods Overview
 
-GoogleTest provides an out-of-the-box CMake build script designed for maximum portability and ease of use. You can build GoogleTest and GoogleMock either standalone or incorporate them into your own project.
+GoogleTest and GoogleMock can be installed using several methods, each suited to different project needs:
 
-### 2.1 Standalone Build
+- **Direct Source Integration**: Include GoogleTest/GoogleMock sources directly in your project.
+- **CMake Build**: Build and install using CMake, supporting both standalone and integrated builds.
+- **Pkg-config with Build Systems**: Use pkg-config files to integrate with other build systems.
+- **Bazel Build**: Use Bazel for builds and dependency management.
+- **Platform-Specific Package Managers**: Use OS package systems where available.
 
-Follow these steps to clone and build GoogleTest as a standalone project:
+### 2.1 Direct Source Integration
+
+This method embeds GoogleTest and GoogleMock source files directly into your project tree, simplifying dependency management for small or isolated projects.
+
+### 2.2 CMake Build
+
+The recommended method for most users, CMake support is community maintained and highly flexible. You can build GoogleTest standalone or embed it into your own CMake project.
+
+### 2.3 Bazel Build
+
+For projects using Bazel as their build system, GoogleTest and GoogleMock can be added as Bazel dependencies following the guidelines in the Bazel quickstart.
+
+### 2.4 Pkg-config Support
+
+GoogleTest provides pkg-config files (`gtest_main.pc` and `gmock_main.pc`) to help build systems discover necessary compile and link flags.
+
+<Info>
+Ensure your `PKG_CONFIG_PATH` includes the directory containing these `.pc` files; typically this is where GoogleTest or GoogleMock was installed.
+</Info>
+
+### 2.5 Platform-Specific Instructions
+
+Some platforms may offer pre-built GoogleTest packages or have specific nuances. Check your platform’s package repository or the [Supported Platforms](platforms.md) guide.
+
+---
+
+## 3. Step-by-Step Installation Instructions
+
+### 3.1 Building GoogleTest and GoogleMock from Source with CMake
+
+Follow these exact steps to build and optionally install GoogleTest and GoogleMock:
 
 <Steps>
-<Step title="Clone the GoogleTest repository">
-Run the following command to clone the latest stable release (v1.17.0 used here as example):
-
+<Step title="Clone the Repository">
+Run:
 ```bash
-git clone https://github.com/google/googletest.git -b v1.17.0
+git clone https://github.com/google/googletest.git -b main
 cd googletest
 ```
+This clones the latest GoogleTest repository and switches into its directory.
 </Step>
-<Step title="Create a build directory and configure with CMake">
-Create a directory separate from the source for building and switch into it:
-
+<Step title="Create a Build Directory">
 ```bash
 mkdir build
+d
 cd build
 ```
-
-Generate build files:
-
+Creating a separate build directory keeps build files isolated from source.
+</Step>
+<Step title="Configure the Build via CMake">
+Basic command to build both GoogleTest and GoogleMock:
 ```bash
 cmake ..
 ```
-
-To build GoogleTest only (without GoogleMock), add the flag:
-
+To build only GoogleTest (without GoogleMock):
 ```bash
 cmake .. -DBUILD_GMOCK=OFF
 ```
-</Step>
-<Step title="Build GoogleTest">
-On Unix-like systems run:
 
+For Windows users with Visual Studio, this generates a Visual Studio solution file.
+</Step>
+<Step title="Build the Libraries">
+Execute:
 ```bash
 make
 ```
-
-On Windows, open the generated `gtest.sln` solution file with Visual Studio and build.
-
-On Mac OS X, use the generated `.xcodeproj` file.
+(or use your platform’s appropriate build tool, like `cmake --build .` or Visual Studio build options).
 </Step>
-<Step title="Optional: Install GoogleTest">
-To install GoogleTest and its headers system-wide (may require admin permission):
-
+<Step title="Install (Optional)">  
+If you have admin rights and want to install to the default path `/usr/local` or your configured prefix:
 ```bash
 sudo make install
 ```
-
-This installs libraries to `/usr/local/lib` and headers to `/usr/local/include` by default.
+This installs headers and libraries, including pkg-config files.
 </Step>
 </Steps>
 
-<Note>
-If your system uses different default paths, you can customize install locations with CMake variables.
-</Note>
+### 3.2 Integrate GoogleTest in Your CMake Project Using FetchContent
 
-### 2.2 Integration Into Your CMake Project
+To embed GoogleTest in your own CMake project ensuring consistent compiler settings:
 
-There are two main ways to add GoogleTest to an existing project:
-
-- **Find Installed Package**: Use `find_package(GTest CONFIG REQUIRED)` if GoogleTest is installed on your system.
-
-- **Add as a Subdirectory**: Include GoogleTest source in your project and add it with CMake's `add_subdirectory()` command. This ensures consistent compiler and linker settings.
-
-Example `CMakeLists.txt` snippet to download and add GoogleTest during configure step:
+Add the following in your `CMakeLists.txt`:
 
 ```cmake
 include(FetchContent)
 FetchContent_Declare(
   googletest
-  URL https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip
+  URL https://github.com/google/googletest/archive/main.zip
 )
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE) # For Windows dynamic runtime linkage
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE) # For Windows VC runtime compatibility
 FetchContent_MakeAvailable(googletest)
-
-add_executable(example example.cpp)
-target_link_libraries(example gtest_main)
-add_test(NAME example_test COMMAND example)
 ```
 
-<Tip>
-Make sure to have CMake 3.14 or later to use `FetchContent_MakeAvailable()`.
-</Tip>
+Then link to GoogleTest libraries:
 
-### 2.3 Visual Studio Runtime Library Considerations
-
-Visual Studio projects commonly use dynamic runtimes, while GoogleTest by default uses static runtimes. This mismatch causes linker errors like `LNK2038`.
-
-Use the CMake option `gtest_force_shared_crt` to match your project’s runtime linkage, e.g.,
-
-```bash
-cmake -Dgtest_force_shared_crt=ON ..
+```cmake
+add_executable(my_tests my_test.cc)
+target_link_libraries(my_tests GTest::gtest_main)
 ```
 
-This adjustment aligns GoogleTest’s runtime linkage to your project’s settings.
+This approach requires CMake 3.14 or later.
+
+### 3.3 Using pkg-config Files
+
+GoogleTest installs `.pc` files for `gtest_main` and `gmock_main` which define compilation and linking flags.
+
+Example usage in CMake:
+
+```cmake
+find_package(PkgConfig REQUIRED)
+pkg_search_module(GTEST REQUIRED gtest_main)
+
+add_executable(testapp samples/sample3_unittest.cc)
+target_link_libraries(testapp PRIVATE ${GTEST_LDFLAGS})
+target_compile_options(testapp PRIVATE ${GTEST_CFLAGS})
+
+enable_testing()
+add_test(NAME sample_test COMMAND testapp)
+```
+
+<Note>
+If pkg-config cannot find these files after installation, make sure `$PKG_CONFIG_PATH` includes the directory where `.pc` files are installed, e.g., `/usr/local/lib64/pkgconfig`.
+</Note>
+
+### 3.4 Bazel Installation
+
+If your project uses Bazel, add GoogleTest and GoogleMock as bazel dependencies. Refer to the dedicated [Quickstart for Bazel](quickstart-bazel.md) guide for detailed instructions.
 
 ---
 
-## 3. Installation Using Bazel
+## 4. Troubleshooting Common Installation Issues
 
-GoogleTest is readily available as a Bazel dependency and integrates seamlessly in Bazel workspaces.
+<AccordionGroup title="Installation Troubleshooting">
+<Accordion title="CMake cannot find gtest_main module via pkg-config">
+This happens when pkg-config does not find the `.pc` files:
 
-### 3.1 Adding GoogleTest to Your Bazel Workspace
+- Confirm you have installed GoogleTest (headers, libraries, and `.pc` files).
+- Set the environment variable to point to the pkg-config directory, e.g.,
 
-Add the following to your `WORKSPACE` file:
+  ```bash
+  export PKG_CONFIG_PATH=/usr/local/lib64/pkgconfig
+  ```
 
-```python
-load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
-
-http_archive(
-    name = "com_google_googletest",
-    url = "https://github.com/google/googletest/archive/release-1.17.0.tar.gz",
-    strip_prefix = "googletest-release-1.17.0",
-    sha256 = "53d8df37dfa2bae5a7b8a269e7ec2f0936484c4a29c5a815874f933571b34cc2",
-)
-```
-
-### 3.2 Using GoogleTest in BUILD Files
-
-Load and link against `@com_google_googletest//:gtest` or `:gmock` targets as needed:
-
-```python
-cc_test(
-    name = "your_tests",
-    srcs = ["your_test.cc"],
-    deps = ["@com_google_googletest//:gtest", "@com_google_googletest//:gmock"],
-)
-```
-
-<Tip>
-Refer to the Bazel documentation for detailed Bazel workspace and BUILD file setup tailored to your environment.
-</Tip>
-
----
-
-## 4. Manual or Custom Installation
-
-If you prefer or require manual setup, follow these steps to install GoogleTest and GoogleMock without build system automation.
-
-### 4.1 Clone the Repository
-
-```bash
-git clone https://github.com/google/googletest.git
-cd googletest
-```
-
-### 4.2 Include Source Files in Your Project
-
-Add the path to the GoogleTest include directories (e.g., `googletest/include` and `googlemock/include`) to your compiler’s include path.
-
-Add the source files from `googletest/src` and `googlemock/src` into your build. Usually, you compile these source files along with your test sources.
-
-### 4.3 Write Your Own `main()` (Optional)
-
-GoogleTest offers a test runner in `gtest_main` which includes a `main()` function. If you do not link `gtest_main`, you need to provide `main()` yourself:
-
-```cpp
-#include <gtest/gtest.h>
-
-int main(int argc, char **argv) {
-  testing::InitGoogleTest(&argc, argv);
-  return RUN_ALL_TESTS();
-}
-```
-
-Alternatively, GoogleMock provides `gmock_main` which similarly initializes GoogleMock and GoogleTest.
-
-### 4.4 Compile and Link
-
-Compile your test sources together with GoogleTest and GoogleMock source files. Link against the standard C++ libraries and threading libraries as needed (e.g., `-pthread` on Unix).
-
-<Tip>
-If you encounter linker errors related to pthread, manually add your platform-specific threading library to the linker flags.
-</Tip>
-
----
-
-## 5. Verifying Your Installation
-
-After installation, ensure everything works by running a simple test.
-
-1. Create a test file named `sample_test.cpp`:
-
-```cpp
-#include <gtest/gtest.h>
-
-TEST(SampleTest, BasicAssertions) {
-  EXPECT_EQ(1, 1);
-  EXPECT_TRUE(true);
-}
-```
-
-2. Build and link the test with GoogleTest and GoogleMock libraries.
-
-3. Run the test executable. You should see output similar to:
-
-```
-[==========] Running 1 test from 1 test suite.
-[----------] Global test environment set-up.
-[----------] 1 test from SampleTest
-[ RUN      ] SampleTest.BasicAssertions
-[       OK ] SampleTest.BasicAssertions (0 ms)
-[----------] 1 test from SampleTest (0 ms total)
-
-[==========] 1 test from 1 test suite ran. (0 ms total)
-[  PASSED  ] 1 test.
-```
-
-If so, your installation is successful.
-
-<Warning>
-If tests fail to run or report missing symbols, check that your compiler flags, include paths, and link libraries are set correctly.
-</Warning>
-
----
-
-## 6. Troubleshooting Common Issues
-
-<AccordionGroup title="Common Installation Issues">
-<Accordion title="Compiler or C++ Standard Version Errors">
-Make sure that your compiler supports C++17. If errors occur related to unsupported language features:
-- Upgrade your compiler.
-- Explicitly set C++17 standard with CMake: `set(CMAKE_CXX_STANDARD 17)` and `set(CMAKE_CXX_STANDARD_REQUIRED ON)`.
+- Retry your build.
 </Accordion>
+<Accordion title="Compiler errors on missing pthread support">
+GoogleTest may require pthread support on POSIX systems.
 
-<Accordion title="Linker Errors Related to Missing Symbols">
-- Confirm you linked against the correct GoogleTest and GoogleMock libraries (`-lgtest_main`, `-lgmock_main` etc).
-- On Unix, ensure `-pthread` is added to both compiler and linker flags.
-- On Windows, use the `gtest_force_shared_crt` CMake option if you have runtime conflicts.
+- Ensure `-pthread` flag is included during compile and link steps.
+- When building with CMake, this is handled automatically.
+- When building manually, add `-DGTEST_HAS_PTHREAD=1` to your compiler flags.
 </Accordion>
+<Accordion title="Visual Studio Runtime Mismatch Errors">
+Errors like `mismatch detected for 'RuntimeLibrary'` usually mean your project and GoogleTest use conflicting runtime libraries.
 
-<Accordion title="Build System Doesn’t Find GoogleTest">
-- When using `find_package(GTest)`, ensure GoogleTest is installed properly.
-- Use `FetchContent` or add GoogleTest as a git submodule to your project to avoid missing dependencies.
-</Accordion>
+- Use the CMake option `gtest_force_shared_crt` to align runtimes:
 
-<Accordion title="GoogleMock-specific Issues">
-- Verify you included the correct headers: `<gmock/gmock.h>`.
-- Remember GoogleMock is bundled with GoogleTest and built together when enabled.
+  ```cmake
+  set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+  ```
+
+- Rebuild GoogleTest using this setting.
 </Accordion>
 </AccordionGroup>
 
 ---
 
-## 7. Next Steps & Resources
+## 5. Additional Platform Considerations
 
-- Explore the [Writing Your First Test](../first-test-execution-validation/writing-your-first-test) page to learn how to write tests with GoogleTest.
-- Use the [Using Mocks in Tests](../../guides/core-workflows/using-mocks-in-tests) guide to get started with mock objects.
-- Consult the [Feature Summary](../../overview/feature-overview/feature-summary) for an overview of GoogleTest capabilities.
-- For CI integration and build system tips, see the [Integration and Ecosystem Compatibility](../../overview/architecture-and-concepts/integration-and-extension) page.
-
-<Check>
-Once installation succeeds and initial test runs pass, proceed to writing and organizing your tests using GoogleTest’s API.
-</Check>
+- On **Windows**, building with Visual Studio generates solution files; open and build using the IDE.
+- On **macOS**, Xcode project files are generated for building.
+- On **cross-compilation environments**, use `DESTDIR` and properly set `PKG_CONFIG_SYSROOT_DIR` and related variables when installing. See the pkg-config cross-compilation section in `docs/pkgconfig.md` for detailed guidance.
 
 ---
 
-**For the latest code, examples, and source:** [GoogleTest GitHub Repository](https://github.com/google/googletest)
+## 6. Next Steps
 
-**Official documentation home:** [GoogleTest Document Site](https://google.github.io/googletest/)
+Now that you have installed GoogleTest and GoogleMock, you can:
 
----
+- [Quickstart: Building with CMake](quickstart-cmake.md) — Follow a step-by-step tutorial for building your first test.
+- [GoogleTest Primer](primer.md) — Learn how to write effective tests, use assertions, and fixtures.
+- [Effective Mocking with GoogleMock](guides/advanced-features-and-patterns/effective-mocking.md) — Explore mocking capabilities.
+- [Troubleshooting Setup Issues](troubleshooting-setup-issues.md) — Resolve common errors during build and integration.
 
-*This page does not address GoogleTest usage, writing tests, or advanced configuration beyond installation. Please refer to respective guides for those topics.*
-
----
-
-## References
-
-- [GoogleTest CMake Build Instructions](https://github.com/google/googletest/blob/main/googletest/README.md)
-- [GoogleMock Official Documentation](https://google.github.io/googletest/gmock_for_dummies.html)
-- [Bazel Setup for GoogleTest](https://docs.bazel.build/versions/main/tutorial/cpp.html#using-a-third-party-library)
-- [Supported Platforms and Requirements](../../overview/feature-overview/supported-platforms)
-- [Configuration and Initial Setup](../configuration-and-initial-setup)
+To verify your installation, create and run a simple test following the quickstart guide.
 
 ---
 
-## Example Quick Commands for Standalone CMake Build (Unix-like)
+## 7. Summary of Commands
 
 ```bash
-git clone https://github.com/google/googletest.git -b v1.17.0
+# Clone the repo
+git clone https://github.com/google/googletest.git -b main
 cd googletest
 mkdir build
 cd build
+
+# Configure and build (both GoogleTest and GoogleMock)
 cmake ..
 make
+
+# Optional: install
 sudo make install
 ```
 
-## Example Minimal Manual Compile Command (Unix-like)
-
+For only GoogleTest, configure with:
 ```bash
-c++ -std=c++17 -isystem googletest/include -isystem googlemock/include \
-    -pthread -c googletest/src/gtest-all.cc
-c++ -std=c++17 -isystem googletest/include -isystem googlemock/include \
-    -pthread -c googlemock/src/gmock-all.cc
-c++ -std=c++17 -pthread your_test.cc gtest-all.o gmock-all.o -o your_test
-./your_test
+cmake .. -DBUILD_GMOCK=OFF
 ```
 
-<Tip>
-Adjust paths and flags as necessary for your environment.
-</Tip>
+---
+
+This concludes the detailed guide on installing GoogleTest and GoogleMock via various methods. For a deeper understanding of usage and build configuration, proceed to the related quickstart and primer documentation.
+
+---
+
+# References
+
+- [Quickstart: Building with CMake](quickstart-cmake.md)
+- [Using pkg-config with GoogleTest](docs/pkgconfig.md)
+- [GoogleTest Primer](primer.md)
+- [GoogleMock CMake Build](googlemock/CMakeLists.txt)
+- [GoogleTest CMake Build](googletest/CMakeLists.txt)
+
+---
